--- a/components/Blob/Blob.module.css
+++ b/components/Blob/Blob.module.css
@@ -1,10 +1,16 @@
 .blob {
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    background: radial-gradient(circle, rgba(108, 92, 231, 0.2) 0%, rgba(255, 255, 255, 0) 70%);
-    top: -100px;
-    right: -100px;
-    z-index: -1;
-    filter: blur(40px);
+  position: absolute;
+  width: 40vw;
+  height: 40vw;
+  max-width: 600px;
+  min-width: 300px;
+  background: radial-gradient(
+    circle,
+    rgba(108, 92, 231, 0.2) 0%,
+    rgba(255, 255, 255, 0) 70%
+  );
+  top: -10%;
+  right: -10%;
+  z-index: -1;
+  filter: blur(40px);
 }
